# gus.app

./: debug-gus.ts  debug-search.ts  eslint.config.mjs  fetch-variables.py  list-models.js  next.config.ts  package-lock.json  package.json  swagger.json  vercel.env
app/: actions.ts  page.tsx
components/: AgentSearch.tsx  DataDisplay.tsx  SearchForm.tsx
components/wizard/: CategoryBrowser.tsx  SearchWizard.tsx  TableConfigurationStep.tsx  TerritoryBrowser.tsx  UnitSelectionStep.tsx  VariableSearchStep.tsx
idea/: README.md  claude_desktop_config.example.json  pyproject.toml  server.py  test_server.py
services/: ai-processor.ts  gus-client.ts  xml-generator.ts
