[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-gus"
version = "0.1.0"
description = "MCP Server for BDL API (Bank Danych Lokalnych - Polish Local Data Bank)"
readme = "README.md"
license = "GNU"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["mcp", "bdl", "gus", "statistics", "poland", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
bdl-mcp-server = "mcp-gus.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp-gus"]
